--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "eslint": "^8.15.0",
-    "eslint-config-next": "^12.1.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-postcss-modules": "^2.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-plugin-testing-library": "^5.5.0",
-    "prettier": "^2.6.2"
+    "eslint-plugin-testing-library": "^5.5.0"
   },
   "peerDependencies": {
+    "eslint": ">=8",
+    "prettier": ">=2",
     "typescript": ">=4"
   },
   "devDependencies": {
+    "eslint": "^8.15.0",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.4"
   }
 }
