--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@navikt/eslint-config-teamsykmelding",
   "packageManager": "yarn@3.2.0",
   "version": "1.5.0",
+  "engines": {
+    "node": "18"
+  },
   "files": [
     "prettier",
     "index.js"
@@ -10,14 +13,14 @@
     "test": "eslint --config=index.js"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-postcss-modules": "^2.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-plugin-testing-library": "^5.9.1"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.10.2"
   },
   "peerDependencies": {
     "eslint": ">=8",
@@ -25,8 +28,9 @@
     "typescript": ">=4"
   },
   "devDependencies": {
-    "eslint": "^8.26.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.4"
+    "eslint": "^8.37.0",
+    "node-gyp": "^9.3.1",
+    "prettier": "^2.8.7",
+    "typescript": "^5.0.2"
   }
 }
