--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@navikt/eslint-config-teamsykmelding",
   "packageManager": "yarn@3.6.1",
-  "version": "3.1.0",
+  "version": "4.0.0",
   "engines": {
     "node": "18"
   },
@@ -13,13 +13,14 @@
     "test": "eslint --config=index.js"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-plugin-import": "^2.28.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.11.0"
+    "eslint-plugin-testing-library": "^6.0.0"
   },
   "peerDependencies": {
     "eslint": ">=8",
@@ -27,9 +28,9 @@
     "typescript": ">=4"
   },
   "devDependencies": {
-    "eslint": "^8.46.0",
+    "eslint": "^8.47.0",
     "node-gyp": "^9.4.0",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.2",
     "typescript": "^5.1.6"
   }
 }
