--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,8 @@ permissions:
   packages: write
 
 jobs:
-  build:
+  build-and-publish:
+    if: github.actor != 'dependabot[bot]'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -30,9 +31,10 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   increment-version:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [build-and-publish]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
